Refactoring and threading

--- a/Imperatur Market Client/dialog/System_Load.resx
+++ b/Imperatur Market Client/dialog/System_Load.resx
@@ -117,4 +117,114 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAYMAAABoCAYAAAATkJznAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAABgTSURBVHhe7Z1/rCZXWcdfYjTR+KOKGsUEVtFIuVus+As0poghikIokRKVaBsI1RApu/d97902
+        AbsxJEqM6fIPphgFIkGJ0RatSprc3m3SvZuAdRvNzrzb3e0Weu+KtGXXRIhRmuvznDln5vyamXPmzDvv
+        nfd+P8mT3fvOnDNn5jnnec7vM1k19rdfcWR/++i9+48cvba/tXaf/BkAAMBhYH977WYy/h8jJ7BvyPbR
+        18lbAAAArCr72zfeSkZ/23ECpax9XN4KAABgldjfPnIDtQRuJ0N/xe8ALNl+xREZFAAAwNgxxgN8Rr9W
+        0DoAAIDRI1oCvvGAcLnGccjoAAAAjBHhDKh2v7919LrH0IfJ1tGTMjoAAABjRrYQ7iDH8ITX4DfK2hUZ
+        DQAAgFWBp4z6jX6DkCORwQEAAKwKXoPfKGvnZFAAAACrQKeWAQsWoQEAwOogBpR9xr5V1h6UUQAAABgz
+        xewin6G3ZGvtmLhfDDofPV3+jkVoAAAwfqRxd42/LltrT8vbS8SiNXIQcAYAALACBE0tla0CAAAAK4io
+        3fuMvy2o/QMAwOqyv/XKU17jbwgGiQEAYKUJ2pJi+8Zb5e0AAABWDXl2gd8BKCFnIW8fhGPnrt2weXbv
+        3hM7u9ubZ3dvlz8DAACoQxjOnb0HTuzs7d999j+iF39x94/XAeiy9cpT8vZB2Ny5+nF+HyV3n93FlhcA
+        AFAHG//NM7vXKsO5G2W0D+rAse4IWDZ3dk/LSwAAAHSKbpQ0oynWB/iMvyFrT8jbF47eyjHf6yoO0gEA
+        AB02mNyXXhnKvadVtwq3EuRtQfAiMr8D0GSgXUk3zuzeTO9wRb0XveP14v12T/M7y9sAAADY3ULsBNhQ
+        8u/qt1DDGbQpHc8yGuA0sxM7V9+n0i/fC4vbAADAB9WQ76sM5u51fVC1aC0U10IHkfeDNqVb7DnHvlYO
+        txDkZQAAAAoy7kc2z+ydUwbzxJndJ3wGs+xWObPXehSl3JSu/QD8BW5N7Qx+n9l7EN1BAADgYXPn6q2+
+        biF52YD71tU98qdahDPgbiKfbB09qUTe3jv24De6hQAAoIambiEfdM+pwrAe3GmYdrdQXSsHAAAOPb5u
+        If5NXq6FnYUKwzXvxUm3FcF2t1BTKwcAAA41bNCNfvSIRWRsbKtwi5XYbp3YVg4AABxKRPfJmb2P6QaT
+        DG70xnBc2+ZuonTZe7pKi0fO7AXtYOpr5aBbCAAAPLBx7NIttAx4ppJM5xX5Uy3szNAtBAAAAaR0C3VB
+        zBZ65KZbhHRYTMYGXqVV/uSFWhdGt1CXVg4AAKw8vm4h7vOXlxdC0KZ0njOOdbgVo9LsS++YWjkAALBU
+        pEEt9+DhPvohuk/E2gGfA9AlYG2BSrc9CDx0KwcAAEaLswdPwGrhvgjalC5gq2p2Xnra+xr8BgCAlYcN
+        prk18+K7hXSCTjMLPOOYB4KFMyCngG4hAABowe4Oqgzm8HvwBG1KF7hVtZpRxF1CxmyhAVs5AAAwGtjo
+        lw5AGcwl7MEjN6XzOwAlEWccc4vGfK9hWzkAADAquMtEN5rcrSIvDQrX+L0OQJeIM465G0h/p6FbOQAA
+        MCp4No3hDJbUjcLHVnodgC7ba1GrgnmAGFtKAABAIGwwubtoWYaTjbzX+Bsy3BnHAAAAlgB3//gdgCYD
+        nXEMAABgSfDAsNcB6DLAGccAAACWRNDA8YLPOAYAADAAxbTRm26RfxrwIjK/A9Bke3FnHAMAABiIaoB4
+        7QoZ9nvVdhJBA8ctm9IBAAAYEWTYT5uGfu2c+XeNLPDAewAAAAMTNjbgkYBN6QAAAIwI7vLxGvxawdoC
+        AABYPO+9+O2TWf4Yyb6Ux8RvC4KcwTG/0a8THmPAlFJwyFHldJr9L/37Zvnr4pjmt9NzXli0PVgaG/mv
+        0bspm3d9MnvyZ+SVQ8zQzoBnFYWsKTDEHHQG4NChl9Np/ikqSS+SV/rn+DPfTM94eAh7sDTgDDwM7AyY
+        oNXG9bK9v712u4wKgMOBWU6fmRy/9MPySv9sPHkzPeM5+Sw4g0PDMpxByBnHTcItC7QSwGHCLqfr83fK
+        K/0zzX+/fA6cwSFiCc6A2Q85xMYWHnzmGUkYQxg3m/Nvm8yyX51Msw/Rv5+erJ//cXkF1OGW063JnVe/
+        RV7tj2NXbqC4P689B85gjNy2/w3inabZcZK/nkznvyuvNLAsZ7B99HVeg++X03wcpgwKxg5qZfG45fQ5
+        0Z3TN+vzX6CWwde058AZjJHjF36AKlpfKN+RW3utLMkZMMLI+42/FGo9RJ5fAEYAnEE8bjklmf+RvNoT
+        +y+iGuSfmc+AMxglo3MGvkVoPB6wdfQkxgRWGDiDeLzOIP+86Nbpi2PZ95PRuGA9A85gjIzNGTC8qKxw
+        AhgPODTAGcTjcwa85mB64Y3yjnSm87dRvLy2oHoGnME4GaUz4HUH2JH0cAFnEI/PGbBwt04faw7u3P9G
+        Mhh/68QPZzBOxugMwCEEziCeWmeQXxDdO6lsZD9CcV114oczGCcHwhmIqWnzt1A8Hyb5BCXifqq9vCM4
+        w4p+S7qfw3F4EQ/F12ffKMNTr47nN4mpV8VzKK3Zn9Nz75wcy/sbrzh5/psm69lrSDEfKJ9TCv9GmZDT
+        0ie2DoTQ36GIFagX3miGJ1G6nF74bnlnN1atIPry0iy7b3L3F75T3pFOnTPgbh3eOiKVaT71xM3S3R5w
+        WZ5l7xLlyshH2Ycm6xd+UZSNPvGVtWn2fpGfbZadB71lVKS3Hxs0iDOo7v8L0bRUTLOX0cMfpId+XYtL
+        F860n6MP8CoZwoR/F9edPstCOF5ehs/PCaVQ+HNkvH5K/lIU3PX8DornS84zTHm8Nq0h8BxwzojT/L88
+        cZsyzZ4XaQp1Cl10EJIZTlz+DrqPDH7+P054U1hHD7Xqws1bXaQ+P/I7lfdRxucCEAMbAGEIZBxN3yg6
+        L3VITxNN35K7d/R8EAvnVV634Iu76fvX0VaWS8m+SvKBqPUSrCNuDZ24/FL5y6SlrPnTn+oM1vOfpXBq
+        lTYLvSu9S1uXXbud1CXMBhnloJPI93czWZgzYIOxnv2K+G2WvZV+qwpVk3A4roWoj8YFapptit9999vC
+        hjO0lqsUPs0/KzIMe+Np/hknzjoRCss+GF2D4Yw6zf7VG2eTTLNHJ5vzl8hY6umigzZnMMtfS8//ohOu
+        Ubgw5++uLQBu3uoiB8kZROSlBTuDab5Loozfl0XLpCsbF36e0vvfRVzZ/9G/uhEPdwaxZVkJG/fQ9Cud
+        T7M/Ffmuvaz17wyOP/lD9MyLWniWT7TaiRg7qSTEBi3dGRT3sue6y1B+4fH2hGERkj9bXquk8KKceYom
+        XZX5irieqcJn18prpYgaxa/LFNVTKZzin29QXI8a8XDc1XNYuIanFwQZNsDjK/wZxX0v8X9PoeE0tnWJ
+        tenAJ02Gzq3lyDD29/Hokp87zX9DxmTi5q0ucrCcQV1ecmTRLYPsEv27V/4tKlgd4fUKZTwib+oGK9AZ
+        UPmwy3IhL1CcX6ryEMcvKhH6Pfzci6LstFHqXDivd4twdlym9OsMRCXAsSPtZZbLiL+8p9ugA+IMKhFd
+        HfN3ej0Y9zHP8o9SovWmERufe6RSKXx+WdRyfV0lvCkXd0voH8luKvowFa6E43iodqMvTus0/0OSSnH8
+        f1UDb4Lfnbuy9Oc1vRffP5u/XWQCI4ys9dRRpwMRVtQW/0roYpb/Zil1Na9CN+RQjHgen2xkr/amgfsy
+        i/5NPcP+52T9wo/JOyrEDJXsDXS9SgfLNDtF/xZhebVrkZnNe5Rw+LoukOU4A1u4+/PfRGE10k6t15ju
+        jzZcne+QcJlQfwcabYvZpe+l9OdlPNP8k+JbxsY7m7++LMtFPFzWqcx7xpe4LGzktxTfrXwOhylaXU3U
+        Gb7iebzFN4/btOefLs5AlFeR97XnBjixjYsvp3uf0sL1a4O4bOvvXMjvkVQVvGn+N/J3V9bnt03uyV/c
+        lzN4qr2ZxzWH/HeMF6xkp7V7RCgi+4gZrmUFpluASQkUxuewbFxP3r4XjNHcFtL+XozbmmjeasCvA1b4
+        PxRKjWA6fx+F1Qx79pftRsxTC4yZ4ti1VmazfGdwnd77bcHvnYKvnIrBfHG+Af1N+Y7zXyx8NoIehzAQ
+        kc6A8wsbchWGy800+63W72LXskPOavA5g6Iy9Vp5RxjRedCT57mccqu6Db3ltWgbpOCyoOuxKW+X+DJZ
+        k/Lt+8XCF1Z8AIVBf7AMW8j1ycb85+Qdzdi1WFGjoZpNHW4B3mltzpWQ8rmGXoYNKGzFDCj1rPD3Ytjr
+        G4pvcHSuzlgP7U1VGyee7FLwLAbbAMRsq7wKzkAYvJrusUXgK6f8vfVa/Sz/E3l3IJzHjZbsY5PNJ280
+        jAj/1mQPGPs7igpF4IA2tyi5ZanCtg2Gu84gzCDbxOZB2zCH6t9ueS3aBimW4wxaDLINT1ksayIi/MPe
+        qV916FPgii6R+hqB4wzmd8krYTiZPL9HXnE5fv676L2qgazY93K+Kxn395z/VnnVxNVZN4NaNC+/rMUT
+        Z0zMFatc44kb2E9JO7NMZxBj8PqgrpyyztRvsWsOiu7XZ7TwU8eIqOc0weWqiuNrYrO7YByH9FTjO9jO
+        IMjIeYjJg11nDjHOxn8LtEE6S3EGs/zvowqFs7hl/gfyShj2x2Wl1qErPDqTEk7BIANQh1uIImtpBG81
+        W4WvLxS2DqbZWTEtNJaYb+mja0aNKYhNLNcZtE9g6JO6cqp3TYZ0s+gU40oqvqJrspMz0BxSFz2YevwK
+        /f0T8oqLfm9bZbCJ0DzYdeaQYkgbpGOHG8QZsAGLoVMiNewC3GTAUo2Ok9aGd019L8ZwBhQXx+kjVQeK
+        zflPUtgHxLN4AK7pW/qIMaY6qXpR6Iah6XvVEZP+vtLclbpyyl0O+vkDoWsOuJvPXFtQVOrsfNxmD5hp
+        9h6SR+nZz3bSg6HHlm+bqnNFiD593dqx3bFD2iAdJ1xI2azLZHXY98MZFKS+FzO0MzCgJq9vxlMTti5C
+        37kvw5pqGGLS31eau9JUTs3Vw2FjN+bRltUqZjsft9kDG5GHArpPdAw9tnzbVJ0rWvVJ7+BMkgic/qoz
+        pA3SccKFlM2mTObDvh/OoCD1vZilOoMO2LoIfee+DGuqYYhJf19p7kpTOTUNO0lAv7Q5w6VyIHY+brMH
+        fWDoseXbpupc0aZPdybPMAPVNo5dgTOosAswf+w6hlRE6nsxcAZxpBqGmPT3leauNJVTsZdU/rB2rXkK
+        otu19KmyNm/n4zZ70AeGHlu+barOFU36tAeMU2aODWmDdJxwIWWzKZP5sO+HMyiw751l5+jfagOqEJnm
+        V+hfFX6JzoAMw3svfg/F6y4Y04V1pw9Ah+qyL8OaahjsvNSU/r7S3JW2csrdPFWXRnP69IkD9qCzk49b
+        7EETos99/oPy2/nzEEuxIEo9rzntqTpX1OnTHTAOnznkQ3+O+NbZP9L//eXfJ+LbyAkCRRxwBiV2AeaP
+        XUdqAXbSGuMMUqUho6fqoA4+qF7sLdO6iZ9fQnWZqhdFqmGw81JT+vtKc1fayqk9TbR2nQoZNf1oS3s6
+        qpuP451Bsf7hkyR6N0uoNH/bVJ0rfPrkFpO+CK6Q8JlDPsznpAucgYZdgPlj15FagJ20rrAzEBvV5ZfL
+        OLtIqC77MqyphsHOS03p7yvNXWktp2zktfn6vOaF177YsOFnB1Del98vrxS4+TjcGfDgMe/b5Nt7KFya
+        v22qzhW2PsUUXVEbV7/xN4xfyGljPidd4Aw07ALMH7uO1ALspDXKGfyx+K2rbJz/vtrZPak6sPEtquF9
+        Y3jfeV+zXgnrDt1EwxBSTvWtJerWHBjdSZ4VrfwNzXwc6AzIGTmzb0TL4J8pLeZ+QbYchG6iIZwBr4tY
+        z99UlvEuEnpGBt9r2K6QshmSyXTs++EMClLfK4ZUHejYfaRi58T8l4L6SGOMqU5fhjXVMMSkv680dyWk
+        nDqbzln7RfE6AvNoS/dAfTsft9kDhTv7hp3Ay+TVZgw9tnzbVJ0rfPpcfDfRcPmmkz0KyWQ69v1wBgWp
+        7xVDqg5KuGtB3/skcvqcrYvQd+6rgKQahpj0L6tQK0LLqbEa2FpzYG8/4ntfOx+32QOGW7GzLKvijaxR
+        G3ps+bapOlfU6XORA8hD5ptO9ig0kyns++EMClLfK4ZUHSiCBx1rsHUR+s59FZBUwxCT/mUVakVoOdW3
+        pyi6+6ojMc3Faf6dce183GYPmLaupzYMPbZ821SdK5r0eZCmlnalkz0KzWQK+344g4LU94ohVQcKfaO5
+        Lvu82LoIfee+CkiqYYhJ/7IKtSK0nDp5Q26Y6Ib3r0Ww83Hdc0q4dWkMXMfvk2XoseXbpupc0abPg7Lo
+        rCud7FFoJlM4mQ3OQJD6XgwXquJUqH+iOO6tXTiUqgNFasGydRH6zn0VkCHTv6xCrYgpp74WgNliIKlZ
+        pWzn40XbA8bQY8u3TdW5olWf5OQOynYUotsquyS+LccXgq3HoLIZk8mYVOV3SqSGXYCbPk4fijDSumhn
+        QPGr8E0ZvY8CyKQWLFsXoe+cqhfFkOnvK81diSmn9vYUxXeqH0vQsfPxou0BY+ix5dum6lwRok9sVLdg
+        5XdKpIZdgPlj16ErYtHbxzr3DrqFdboz4G3FeXvxGGxdhOqyL8M6ZPr7SnNXYsopzxriXUjVvbyugA/Q
+        r/6u39nUzcdx9iB2S3tG12PbtzXupXRyersQqk93QJkFW1gL7PvH4gyErOjhNl2dgb6fPc9L54OHYjAP
+        twnXpX3AEaejC0Omf0zOgDEHdb+qfe8XxHvXEesMXMcTd9iVPeZw0JwB41uHEzrDyD4zZKjDbdwT1gKc
+        dGwms+8flTPIHxdHZwbBmTTl2Evun52/Xl5pJ+XYy67OwDnpjJrEoTUe99jLcF06s5hijgLUGDL9Y3MG
+        7jcupO00tFhnwLCBq+5nQ/kueaUd+9jLg+gMGHtAOXSGkWuUF2uDFGz4zTUlAcfwxmYy+/5xOQOS7CNB
+        BsOdTdDlQPx/n5y4/FJ5tR63KRp3IH5XZ2BnGFG7zjbbazx03R5cE+FDdWlnchY+RrLl+9oMmf6xOQPx
+        jbU9iJTYC9FsujgD1/HsUTw/La/W41/kdTCdgT/PdDkQn2SBNkjHrmCyjdmc/6i86iE2k9n3j84ZCGU+
+        VDuAVhy6/1FK19fLMPxB+cO2wQo2m7wc9rII69tagu/nro5p9rwZhgxlU4FN1YEO1xb071m8N71/Te2l
+        KPgPkZiGtAgbrsuNiy+nME+Z4cVMqlP0f22rguwNjc3bodI/OmdA6NtTsIR0pXVxBsJQ5ie1MPys50Xe
+        9hk9LguFofLthdX8bZfmDAh+F3fLivYZRm5eX5wN0vHbI2rRZA/ILtaijK3Pb5vck7/48DiDotZ4rfy7
+        +O0ayRc14d06bSNBfwf2DzL+AadCCVx7Us8S/9e8dnlfwGyFVB0YeGs8Mt782TK9QvhYQ/061+p4YzIZ
+        NlaXbJjMvliftBij5PTfRf/K/XxWzRk4XRTu9hM2nZwB4a/l8zdlg7ZX6YDE3MiOy9cH6V817nBwnQHj
+        e8+QMuvW8lXY/m2Qzub8JRR+x4rPFvn+sZnMvn88LQPuM/tlet5ntN+aRWRkyqi+2k0T3DWkDyaHCmcq
+        Vl4bqTpwoEzGc9N9mbVOVFpFbUlOv4vVJdO+W2qAMeqS/vwRURvSa0+r5gwYo4siYIV5V2fACEPZsXxx
+        9wU7jbZvu2xnwHSdYTTL3lo8ywjXLF1tkA7n86KMuhWmQuT7x2Yy+/4xOQMOK5qo+R2U7qY9+3kZ/+eo
+        8LxKxhSPGKDM3k/x8Mpe3zMq4bRwmup2KbVJ1UEd/L7ivWszDT+Lmv9WWlVB7uIMGOFQuEso/xcS26CH
+        G6NFpn+szqAaxwpLc4ozYMLKF8vjTvnigedZ9pXGdB4EZ8B0nWHEm/exYda7gPySboMMKF0b2avp2X9H
+        aTB7SJaRnwenSeGcaXk2SrG9rjpV6P7JdP6OxtkWsbChW89eIzKKek75PHo2pyHUCQyF2POevkMxO6pK
+        K3+/g5ZWH2NP/ypQV742st+eHMuPyLsOL9yKms3fQt/lw+X3Ud+obxsEiGXX5gAAABwA4AwAAADAGQAA
+        AIAzAAAAQMAZAAAAgDMAAAAAZwAAAICAMwAAAABnAAAAAM4AAAAAAWcAAAABTCb/Dy5ejxH9BeDuAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
 </root>
